add RecordWriter method for results